simple-demo rename